--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,13 @@
   width: 80%;
 }
 
+@media (max-width: 767px) {
+  .container {
+    width: 100%;
+    padding: 0 12px;
+  }
+}
+
 .section {
   padding: 70px 0;
 }
@@ -132,6 +139,19 @@
 .hero__title .red {
   color: var(--red);
 }
+.text-gradient,
+.gradientText {
+  display: inline-block;
+  background: linear-gradient(
+    90deg,
+    rgba(189, 190, 236, 1) 0%,
+    rgba(142, 85, 250, 1) 52%,
+    rgba(91, 46, 193, 1) 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
 .red {
   color: #eb1e1e;
 }
@@ -153,6 +173,7 @@
   max-width: 720px;
   font-size: clamp(14px, 1.3vw, 18px);
   color: rgba(255, 255, 255, 0.9);
+  font-weight: 700;
 }
 
 .videoShell {
@@ -1209,7 +1230,7 @@
 
 .rockPlus {
   margin: 0;
-  color: var(--yellow);
+  /* color: var(--yellow); */
   font-size: clamp(20px, 2vw, 22px);
   font-weight: 500;
   line-height: 1.1;
@@ -1705,7 +1726,7 @@
   margin-top: 8px;
   font-weight: 700;
   letter-spacing: 0.02em;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .pricingMeta--general {
@@ -1833,8 +1854,13 @@
 }
 
 .giveawaySection {
-  position: relative;
-  background: radial-gradient(50% 50% at 50% 50%, rgb(33, 0, 0) 0%, rgba(13, 13, 13, 0) 100%);
+    position: relative;
+    background: radial-gradient(
+    55% 55% at 50% 40%,
+    rgba(142, 85, 250, 0.2) 0%,
+    rgba(91, 46, 193, 0.12) 35%,
+    rgba(13, 13, 13, 0) 100%
+  );
 }
 
 .giveawaySection::before {
@@ -2000,16 +2026,16 @@
     font-size: clamp(30px, 3vw, 45px);
     line-height: 1.05;
     letter-spacing: -0.02em;
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
     90deg,
     rgb(255, 162, 1) 0%,
     rgb(255, 199, 102) 25%,
     rgb(255, 162, 1) 75%,
     rgb(255, 199, 102) 100%
-  );
+  ); */
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
+    color: #fff;
 }
 
 .guaranteeBody {
@@ -2718,7 +2744,8 @@
 
 @media (max-width: 1355px) {
   .container {
-    width: 90%;
+    /* width: 100%; */
+    /* margin: 0 auto; */
   }
 }
 @media (max-width: 991px) {
